# naravisuals-labwc-lxqt

./: .gitignore  CMakeLists.txt  ORIGINAL_REQUEST.md  PKGBUILD  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  TODOS.md  TROUBLESHOOT.md  apply-theme.sh  archive.sh  build-all.sh  build-appimage.sh  build-plugins.sh  build.go  build_latest_lxqt_desktop.sh  enable-natural-scrollong.sh  fix-clipboard-wayland.sh  go.mod  healthcheck.sh  install-plugins.sh  install.sh  manual_build_lxqt_desktop.sh  run_audio_gui.sh  run_autorun_manager.sh  run_bluetooth_gui.sh  run_desktop_gui.sh  run_display_gui.sh  run_keybinds_manager.sh  run_launcher_gui.sh  run_log_gui.sh  run_service_gui.sh  run_theme_gui.sh  run_wallpaper_gui.sh  run_wm_gui.sh  switch-lxqt-compositor.sh  sys-suspend.py  toggle-audio-mute.sh  toggle-redshift.sh  (+3 more)
apps/audio-gui/: CMakeLists.txt  main.cpp
apps/autorun-gui/: CMakeLists.txt  main.cpp
apps/backup-gui/: CMakeLists.txt  main.cpp
apps/bluetooth-gui/: CMakeLists.txt  main.cpp
apps/control-center/: CMakeLists.txt  main.cpp
apps/default-apps-gui/: CMakeLists.txt  main.cpp
apps/desktop-gui/: CMakeLists.txt  main.cpp
apps/disk-gui/: CMakeLists.txt  main.cpp
apps/display-gui/: CMakeLists.txt  main.cpp
apps/dock-gui/: CMakeLists.txt  main.cpp
apps/env-gui/: CMakeLists.txt  main.cpp  mainwindow.h
apps/env-gui/tests/: CMakeLists.txt  test_env_gui.cpp
apps/flatpak-gui/: CMakeLists.txt  main.cpp
apps/font-gui/: CMakeLists.txt  main.cpp
apps/input-gui/: CMakeLists.txt  main.cpp
apps/keybinds-gui/: CMakeLists.txt  main.cpp
apps/keyboard-gui/: CMakeLists.txt  main.cpp
apps/launcher-gui/: CMakeLists.txt  main.cpp
apps/lockscreen-gui/: CMakeLists.txt  main.cpp
apps/log-gui/: CMakeLists.txt  main.cpp
apps/mime-gui/: CMakeLists.txt  main.cpp
apps/network-gui/: CMakeLists.txt  main.cpp
apps/nightlight-gui/: CMakeLists.txt  main.cpp
apps/notifications-gui/: CMakeLists.txt  main.cpp
apps/ntfs-gui/: CMakeLists.txt  main.cpp
apps/panel-gui/: CMakeLists.txt  main.cpp
apps/power-gui/: CMakeLists.txt  main.cpp
apps/process-gui/: CMakeLists.txt  main.cpp
apps/screenshot-gui/: CMakeLists.txt  main.cpp
apps/sddm-gui/: CMakeLists.txt  main.cpp
apps/service-gui/: CMakeLists.txt  main.cpp
apps/shared/: CMakeLists.txt  healthcheck-cli.cpp  healthcheck.cpp  healthcheck.h  healthcheckwidget.cpp  healthcheckwidget.h
apps/sync-gui/: CMakeLists.txt  main.cpp
apps/sync-gui/tests/: test_sync.cpp
apps/theme-gui/: CMakeLists.txt  main.cpp
apps/wallpaper-gui/: CMakeLists.txt  main.cpp
apps/wm-gui/: CMakeLists.txt  main.cpp  windowrules.cpp  windowrules.h
cmd/dotfiles-manager/: build.cpp  main.go
cmd/dotfiles-manager/installer/: CMakeLists.txt  Pages.cpp  SettingsWindow.cpp  ThemeManager.cpp  ThemeManager.h  build_system  main.cpp
configs/themes/: catppuccin.conf  dracula.conf  everforest.conf  gruvbox.conf  nord.conf  tokyo-night.conf
debian/: changelog  control  copyright  naravisuals-labwc-lxqt.install  postinst  rules
docs/: README.md  applications.md  architecture.md  compositors.md  configuration.md  contributing.md  distro-support.md  installation.md  keybindings.md  scripts.md  theming.md
dotfiles/dunst/: dunstrc
dotfiles/emacs/: init.el
dotfiles/fonts/: README
dotfiles/gtk-4.0/: settings.ini
dotfiles/labwc/: autostart  environment  shutdown  themerc
dotfiles/lxqt/: lxqt-notificationd.conf  lxqt-powermanagement.conf  lxqt.conf
dotfiles/sddm/: lxqt-labwc.conf
dotfiles/wallpapers/: README
dotfiles/wayland-sessions/: lxqt-labwc.desktop
installer/: NaraVisualsThemeManager  Pages.h  SettingsWindow.h  build.cpp  run.sh
plugins/: CMakeLists.txt
plugins/naravisuals-color-picker/: CMakeLists.txt  naravisuals-color-picker.cpp  naravisuals-color-picker.desktop
plugins/naravisuals-cpu-monitor/: CMakeLists.txt  naravisuals-cpu-monitor.cpp  naravisuals-cpu-monitor.desktop
plugins/naravisuals-nightlight/: CMakeLists.txt  naravisuals-nightlight.cpp  naravisuals-nightlight.desktop
plugins/naravisuals-screenshot/: CMakeLists.txt  naravisuals-screenshot.cpp  naravisuals-screenshot.desktop
plugins/naravisuals-sticky-notes/: CMakeLists.txt  naravisuals-sticky-notes.cpp  naravisuals-sticky-notes.desktop
plugins/naravisuals-updates/: CMakeLists.txt  naravisuals-updates.cpp  naravisuals-updates.desktop
plugins/naravisuals-weather-widget/: CMakeLists.txt  naravisuals-weather-widget.cpp  naravisuals-weather-widget.desktop  naravisuals-weather-widget.h
qt6-build/: CMakeCache.txt  config.opt  config.opt.in  config.tl.opt.in
rpm/: naravisuals-labwc-lxqt.spec
scripts/: conky.sh  cursors.sh  emacs.sh  fix-gtk-window-controls.sh  fonts.sh  icons.sh  install-all.sh  install-minimal-apps.sh  labwc-themes.sh  launch-lxqt-compositor-test.sh  launch_hyprland_lxqt_test.sh  launch_labwc_lxqt_test.sh  launch_miriway_lxqt_test.sh  launch_niri_lxqt_test.sh  launch_river_lxqt_test.sh  launch_sway_lxqt_test.sh  launch_wayfire_lxqt_test.sh  lib.sh  lxqt-themes.sh  neofetch.sh  reset-panel.sh  switch-lxqt-compositor.sh  test_miriway_session_approaches.sh  themes.sh  update-mir-stack.sh  update_lxqt_panel.sh  wallpapers.sh
scripts/apps-widgets/: conky.sh  emacs.sh  neofetch.sh
scripts/backup/: backup-configs.sh  restore-configs.sh
scripts/compositors/: launch-lxqt-compositor-test.sh  launch_hyprland_lxqt_test.sh  launch_labwc_lxqt_test.sh  launch_miriway_lxqt_test.sh  launch_niri_lxqt_test.sh  launch_river_lxqt_test.sh  launch_sway_lxqt_test.sh  launch_wayfire_lxqt_test.sh  switch-lxqt-compositor.sh  test_miriway_session_approaches.sh
scripts/desktop/: autorotate.sh  set_default_wallpaper.sh  wallpapers.sh
scripts/dev/: remove-gnome-keep-mutter-gtk.sh  remove-plasma-keep-kwin-sddm.sh  update-mir-stack.sh
scripts/features/: install-clipboard.sh  install-compositor.sh  install-emoji-fonts.sh  install-kvantum.sh  install-launcher.sh  install-notifications.sh  install-osd.sh  install-screencast.sh  list-flatpak-permissions.sh  night-light.sh  (+4 more)
tests/e2e/: CMakeLists.txt  e2e_test_runner.py  test_miriway_lxqt.py
(+102 files in other folders)
