cmake_minimum_required(VERSION 3.16)
project(naravisuals-color-picker LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(COMPILE_LXQT_PANEL ON)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
find_package(lxqt-panel REQUIRED)
add_library(naravisuals-color-picker SHARED naravisuals-color-picker.cpp)
target_include_directories(naravisuals-color-picker PRIVATE ${lxqt-panel_INCLUDE_DIRS})
target_link_libraries(naravisuals-color-picker PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets ${lxqt-panel_LIBRARIES})
install(TARGETS naravisuals-color-picker LIBRARY DESTINATION ${lxqt-panel_PLUGINS_DIR})
install(FILES naravisuals-color-picker.desktop DESTINATION ${lxqt-panel_SHARE_DIR})
