cmake_minimum_required(VERSION 3.16)
project(naravisuals-sticky-notes LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(COMPILE_LXQT_PANEL ON)
find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
find_package(lxqt-panel REQUIRED)
add_library(naravisuals-sticky-notes SHARED naravisuals-sticky-notes.cpp)
target_include_directories(naravisuals-sticky-notes PRIVATE ${lxqt-panel_INCLUDE_DIRS})
target_link_libraries(naravisuals-sticky-notes PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets ${lxqt-panel_LIBRARIES})
install(TARGETS naravisuals-sticky-notes LIBRARY DESTINATION ${lxqt-panel_PLUGINS_DIR})
install(FILES naravisuals-sticky-notes.desktop DESTINATION ${lxqt-panel_SHARE_DIR})
